--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,4 @@
-#saved-cities {
-    border: 2px solid black;
-    min-height: 400px;
-}
-
 #weather-container {
-    border: 2px solid black;
     width: 600px;
     height: 200px;
     
@@ -20,4 +14,13 @@ font-size: larger;
 }
 .weatherEl p {
     font-weight: 700;
+}
+.current-city {
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: cornflowerblue;
+}
+.red {
+    background-color: red;
 }
